# fastapi-archive-hasher

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  main.py
src/api/v1/: dependencies.py  router.py
src/controllers/v1/: dependencies.py  download_archive_controller.py
src/domain/: file_metadata.py
src/interfaces/: i_controller.py
src/interfaces/repositories/: i_file_repo.py  i_hash_repo.py  i_http_repo.py
src/repository/v1/: file_repo.py  hash_repo.py  http_repo.py
src/use_cases/: extract_file_use_case.py  fetch_file_use_case.py  hash_files_use_case.py  write_file_use_case.py
src/utils/: thread_pool_singleton.py
tests/integration_test/: conftest.py
tests/integration_test/v1/: test_api.py
tests/unit_test/api/v1/: __init__.py  conftest.py  test_router.py
tests/unit_test/controllers/v1/: conftest.py  test_dependencies.py  test_download_repo_controller.py
tests/unit_test/domain/: test_file_metadata.py
tests/unit_test/interfaces/: test_i_controller.py
tests/unit_test/interfaces/repositories/: test_i_file_repo.py  test_i_hash_repo.py  test_i_http_repo.py
tests/unit_test/repository/v1/: conftest.py  test_file_repo.py  test_hash_repo.py  test_http_repo.py
tests/unit_test/use_cases/: test_extract_file_use_case.py  test_fetch_file_use_case.py  test_hash_files_use_case.py  test_write_file_use_case.py
tests/unit_test/utils/: test_thread_pool_singleton.py
